# ai-orchestration

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  agent_prompts.py  api_tools.py  llm_tools.py  orchestration_context.py  orchestrator_cli.py  pyproject.toml
.devcontainer/: .env.sample  Dockerfile  devcontainer.json  init-firewall.sh
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: orchestrator-tests.yml
.serena/: project.yml
.serena/memories/: completion_checklist.md  project_overview.md  style_and_conventions.md  suggested_commands.md
.zed/: settings.json
tests/: test_api_tools.py  test_llm_tools.py  test_orchestration_context.py  test_orchestrator_cli.py
