[project]
name = "ai-orchestration"
version = "0.3.0a0"
description = "6-stage AI orchestration tool: Gemini → Codex → Claude workflow for automated code generation and review"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pydantic>=2.12.5",
    "rich>=14.2.0",
    "typer>=0.21.1",
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
norecursedirs = ["workspace", "logs", "orchestrator_debug_logs", ".venv"]
