[project]
name = "ai-orchestration"
version = "0.4.0a0"
description = "6-stage AI orchestration tool: Gemini → Codex → Claude workflow for automated code generation and review"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pydantic>=2.12.5",
    "rich>=14.2.0",
    "typer>=0.21.1",
]

[project.optional-dependencies]
api = [
    "openai>=1.82.0",
    "anthropic>=0.52.0",
    "google-generativeai>=0.8.0",
]

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
    "pytest>=8.4.2",
    "ruff>=0.9.3",
]

[tool.ruff]
line-length = 88
target-version = "py39"
exclude = ["workspace", ".venv"]

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501", "E722"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["E402"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
norecursedirs = ["workspace", "logs", "orchestrator_debug_logs", ".venv"]
